# Project1

./: .gitignore  AddNebulaDialog_8h.html  AddNebulaDialog_8h.js  AddNebulaDialog_8h_source.html  AddStarSystemDialog_8h.html  AddStarSystemDialog_8h.js  AddStarSystemDialog_8h_source.html  Algorithm.h  Algorithm_8h.html  Algorithm_8h.js  Algorithm_8h_source.html  BFS.h  BFSList_8h_source.html  BFSMatrix_8h.html  BFSMatrix_8h.js  BFSMatrix_8h_source.html  BFS_list.h  BFS_matrix.h  BasicUsageExample_8cpp-example.html  BasicUsageExample_8cpp.html  BasicUsageExample_8cpp.js  BfsListTesting.h  BfsMatrixTesting.h  CMakeLists.txt  CelestialObject.cpp  CelestialObject.h  CelestialObject_8h.html  CelestialObject_8h.js  CelestialObject_8h_source.html  CelestialObjects.cpp  CelestialObjects.h  DFS.h  DFSList_8h_source.html  DFSMatrix_8h.html  DFSMatrix_8h.js  DFSMatrix_8h_source.html  DFS_list.h  DFS_matrix.h  DfsListTesting.h  DfsMatrixTesting.h  (+228 more)
.github/workflows/: docs.yml
3DView/: CelestialObject3DModel.h  CelestialObjects3DModel.cpp  PlanetarySystemModel.cpp  PlanetarySystemModel.h  galaxyview3d.cpp  galaxyview3d.h  galaxyview3d.ui
Algorithms/: Algorithm.h  BFSList.h  BFSMatrix.h  DFSList.h  DFSMatrix.h  DijkstraList.h  DijkstraMatrix.h  DijkstraPathList.h  FruchtermanReingoldLayout.h  IsConnectedList.h  IsConnectedMatrix.h
Algorithms/PhysicsAlgorithms/: BlackHoleGravityField.cpp  BlackHoleGravityField.h  CelestialBodyToRigidWrapper.cpp  CelestialBodyToRigidWrapper.h  GalaxyPhysicsController.cpp  GalaxyPhysicsController.h  PhysicsEngine.cpp  PhysicsEngine.h
Entities/: CelestialObject.cpp  CelestialObject.h  Galaxy.h  Nebula.cpp  Nebula.h  Planet.cpp  Planet.h  Star.cpp  Star.h  StarSystem.cpp  StarSystem.h
GalaxyView/: AddNebulaDialog.cpp  AddNebulaDialog.h  AddStarSystemDialog.cpp  AddStarSystemDialog.h  EditNebulaDialog.cpp  EditNebulaDialog.h  EditStarSystemDialog.cpp  EditStarSystemDialog.h  GalaxyEditDialog.cpp  GalaxyEditDialog.h  galaxyview.cpp  galaxyview.h  galaxyview.ui
GoogleTests/: BFSListTests.cpp  BFSMatrixTests.cpp  DFSListTests.cpp  DFSMatrixTests.cpp  DijkstraListTests.cpp  DijkstraMatrixTests.cpp  EdgeTests.cpp  GalaxyGenerationTests.cpp  GalaxyListTests.cpp  GalaxyMatrixTests.cpp  GraphListTests.cpp  GraphMatrixTests.cpp  IsConnectedListTests.cpp  IsConnectedMatrixTests.cpp  NebulaTests.cpp  PlanetTests.cpp  QueueTests.cpp  RAIIGuard.h  RandomUtilitiesTests.cpp  StarSystemTests.cpp  StarTests.cpp  TestFixtures.h  VertexTests.cpp
Graph/: Edge.h  Graph.h  GraphList.h  GraphMatrix.h  GraphWidget.cpp  GraphWidget.h  Queue.h  Vertex.h
MainWindow/: windowinterface.cpp  windowinterface.h  windowinterface.ui
RandomGalaxy/: CelestialObjects.json  RandomUtilities.h
RandomGalaxy/Names/: brownDwarf.txt  darkNebula.txt  dwarfPlanet.txt  emissionNebula.txt  galaxy.txt  gasGiant.txt  mainSequenceStar.txt  neutronStar.txt  planetaryNebula.txt  redDwarf.txt  redGiant.txt  reflectionNebula.txt  supernova.txt  terrestrialPlanet.txt  whiteDwarf.txt
UnitTests/: BFSListTesting.h  BFSMatrixTesting.h  DFSListTesting.h  DFSMatrixTesting.h  DijkstraListTesting.h  DijkstraMatrixTesting.h  EdgeTesting.h  GraphListMatrixTesting.h  IsConnectedListTesting.h  IsConnectedMatrixTesting.h  PlanetTesting.h  QueueTesting.h  StarTesting.h  VertexTesting.h  testing.cpp
examples/: BasicUsageExample.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+35 more)
